Add simple database interface.
mappers can be created for each interaction with the database and
included in the config.